fixed align of the portfolio blueprint

--- a/src/app/landing-page-content/components/projects-portfolio/project-blueprint/project-blueprint.component.scss
+++ b/src/app/landing-page-content/components/projects-portfolio/project-blueprint/project-blueprint.component.scss
@@ -1,6 +1,7 @@
 section {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 35px;
     height: 339px;
     width: 100%;
